Fixed OpenApi contract
